// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-plugin-less Stage: build-html / Less options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / Less options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / Loader options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / css-loader options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-html / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":{\\"namedExport\\":false}})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / Less options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / Less options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / Loader options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / css-loader options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: build-javascript / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":{\\"namedExport\\":false}})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / Less options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / Less options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / Loader options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"modules\\":false})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / css-loader options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":{\\"namedExport\\":false}})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "miniCssExtract",
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":false})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / Less options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                          "strictMath": true,
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / Less options #2 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {
                          "modifyVars": Object {
                            "text-color": "#fff",
                          },
                        },
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / Loader options #1 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "appendData": "@env: test;",
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / No options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / PostCss plugins 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"modules\\":true})",
                    "postcss({\\"plugins\\":[\\"test1\\"]})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / css-loader options 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"camelCase\\":false,\\"modules\\":true})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`gatsby-plugin-less Stage: develop-html / css-loader use commonjs 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "module": Object {
          "rules": Array [
            Object {
              "oneOf": Array [
                Object {
                  "test": /\\\\\\.module\\\\\\.less\\$/,
                  "use": Array [
                    "css({\\"importLoaders\\":2,\\"esModule\\":false,\\"modules\\":{\\"namedExport\\":false}})",
                    "postcss({})",
                    Object {
                      "loader": "/resolved/path/less-loader",
                      "options": Object {
                        "lessOptions": Object {},
                      },
                    },
                  ],
                },
                Object {
                  "test": /\\\\\\.less\\$/,
                  "use": Array [
                    "null",
                  ],
                },
              ],
            },
          ],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
